# SegmenteX

./: .gitignore  CMakeLists.txt  main.cpp
.VSCodeCounter/2021-12-11_22-30-14/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-12-12_18-15-20/: details.md  results.csv  results.md  results.txt
src/: Animator.cpp  Animator.h  CableAttachableObject.h  Collision.cpp  Collision.h  CollisionManager.h  CoordinateUtils.h  Define.h  Drawer.h  FieldScene.cpp  FieldScene.h  GameArray.h  GameArrayIterator.h  Image.h  Keyboard.h  KeyboardManager.cpp  KeyboardManager.h  KeyboardUtils.cpp  KeyboardUtils.h  Map.cpp  Map.h  MouseUtils.cpp  MouseUtils.h  Object.cpp  Object.h  ObjectManager.h  Particle.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Point.h  ResourceManager.cpp  ResourceManager.h  SceneManager.h  TimeManager.cpp  TimeManager.h  WindowManager.cpp  WindowManager.h
src/objects/: Block.h  Cable.h  Eraser.h  Goal.h  InvalidObject.h  KeyInput.h  Segment.h  Spike.h
